@@ -1,9 +1,0 @@
-/* $Id$ */
-
-#ifndef	_VIRSCAN_H
-#define	_VIRSCAN_H
-
-int VirScan(char *);
-
-#endif
-
